# zh-ime-data

./: .gitmodules  README.md  merged.csv  pyproject.toml
src/: load_raw.py  main.py  paths.py  speller.py  spellers.yaml
